@@ -34,11 +34,11 @@
 #include "bmc-device-argp.h"
 
 #include "freeipmi-portability.h"
-#include "hostrange.h"
 #include "pstdout.h"
 #include "tool-common.h"
 #include "tool-cmdline-common.h"
 #include "tool-fiid-wrappers.h"
+#include "tool-hostrange-common.h"
 
 static int
 cold_reset (bmc_device_state_data_t *state_data)
