@@ -34,11 +34,11 @@
 #include "bmc-info-argp.h"
 
 #include "freeipmi-portability.h"
-#include "hostrange.h"
 #include "pstdout.h"
 #include "tool-common.h"
 #include "tool-cmdline-common.h"
 #include "tool-fiid-wrappers.h"
+#include "tool-hostrange-common.h"
 
 typedef struct channel_info 
 {
