@@ -35,9 +35,9 @@
 
 #include "freeipmi-portability.h"
 #include "pstdout.h"
-#include "hostrange.h"
 #include "tool-common.h"
 #include "tool-cmdline-common.h"
+#include "tool-hostrange-common.h"
 
 int
 ipmi_raw_cmdline (ipmi_raw_state_data_t *state_data)
