@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmimonitoring.c,v 1.53 2008-06-19 20:52:09 chu11 Exp $
+ *  $Id: ipmimonitoring.c,v 1.54 2008-06-19 21:09:12 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2007-2008 Lawrence Livermore National Security, LLC.
  *  Copyright (C) 2006-2007 The Regents of the University of California.
@@ -60,12 +60,12 @@
 #include "ipmimonitoring.h"     /* tool .h file */
 #include "ipmimonitoring-argp.h"
 
-#include "pstdout.h"
-#include "hostrange.h"
 #include "freeipmi-portability.h"
+#include "pstdout.h"
 #include "secure.h"
 #include "tool-common.h"
 #include "tool-cmdline-common.h"
+#include "tool-hostrange-common.h"
 #include "tool-sdr-cache-common.h"
 
 #ifndef MAXPATHLEN
